<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_height="90dp"
        android:layout_width="match_parent"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/shop_bottom_type">
        <TextView
            android:text="@string/product_list"
            android:textSize="45sp"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/clear"
            android:text="@string/empty"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <LinearLayout
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:background="#fff5f5f5">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:text="@string/product_picture"
            android:textSize="28sp"
            android:textColor="#ff919191"
            android:gravity="center"/>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:text="@string/product_name"
            android:textSize="28sp"
            android:textColor="#ff919191"
            android:gravity="center"/>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:text="@string/product_quantity"
            android:textSize="28sp"
            android:textColor="#ff919191"
            android:gravity="center"/>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/subtotal"
            android:textSize="28sp"
            android:textColor="#ff919191"
            android:gravity="center"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/selectRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:background="@color/white">
    </android.support.v7.widget.RecyclerView>
    <LinearLayout
        android:layout_height="100dp"
        android:layout_width="match_parent"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:background="@color/white">
    </LinearLayout>
    <LinearLayout
        android:layout_height="80dp"
        android:layout_width="match_parent"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp">
    </LinearLayout>
</LinearLayout>