<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:gravity="center_vertical"
        android:background="@drawable/underpainting_green">
        <TextView
            android:id="@+id/returnBack"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/return_selector"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/aisle_test"
            android:textSize="50sp"
            android:textColor="#ffffff"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/header">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical">
            <RelativeLayout android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="#fff"
                android:layout_width="match_parent"
                android:layout_height="80dp">
                <TextView android:text="@string/aisleID"
                    android:textSize="35sp"
                    android:textColor="#000"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:text="@string/aisle_state"
                    android:textSize="35sp"
                    android:textColor="#000"
                    android:layout_centerVertical="true"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="200dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView android:text="@string/aisle_test"
                    android:textSize="35sp"
                    android:textColor="#000"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="400dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/aisleTest"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <EditText
                    android:id="@+id/input_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_input_row"
                    android:inputType="number"
                    android:text=""/>
                <Button
                    android:id="@+id/test_by_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_by_row" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <EditText
                    android:id="@+id/input_column"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_input_column"
                    android:inputType="number"
                    android:text=""/>
                <Button
                    android:id="@+id/test_by_column"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_by_column" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <Button
                    android:id="@+id/test_all_aisle"
                    android:layout_centerInParent="true"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/test_all_aisle" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <EditText
                    android:id="@+id/input_positionID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_input_positionID"
                    android:inputType="number"
                    android:digits="1234567890,"
                    android:text=""/>
                <Button
                    android:id="@+id/simulation_outgoods"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simulation_outgoods" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <Button
                    android:id="@+id/stop_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop_test" />
            </LinearLayout>
            <!--<LinearLayout-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:orientation="vertical"-->
                <!--android:gravity="center">-->
                <!--<Button-->
                    <!--android:id="@+id/test"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="测试" />-->
            <!--</LinearLayout>-->
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>