<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/containerLayout"
    tools:context="com.njust.wanyuan_display.activity.ManagerActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:gravity="center_vertical"
        android:background="@drawable/underpainting_green">
        <TextView
            android:id="@+id/returnBack"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/return_selector"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/device_manager"
            android:textSize="50sp"
            android:textColor="#ffffff"/>

    </RelativeLayout>
    <GridLayout
        android:id="@+id/manager_gridLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:columnCount="3">

        <RelativeLayout
            android:id="@+id/replenishment"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/manager_button_type"
            android:layout_width="360dp"
            android:layout_height="200dp">
            <TextView android:text="@string/replenishment"
                android:textSize="65sp"
                android:textColor="#000"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/aisle_setting"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/manager_button_type"
            android:layout_width="360dp"
            android:layout_height="200dp">
            <TextView android:text="@string/aisle_setting"
                android:textSize="65sp"
                android:textColor="#000"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/device_state"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/manager_button_type"
            android:layout_width="360dp"
            android:layout_height="200dp">
            <TextView android:text="@string/device_state"
                android:textSize="65sp"
                android:textColor="#000"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/aisle_test"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/manager_button_type"
            android:layout_width="360dp"
            android:layout_height="200dp">
            <TextView android:text="@string/aisle_test"
                android:textSize="65sp"
                android:textColor="#000"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/advanced_setting"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/manager_button_type"
            android:layout_width="360dp"
            android:layout_height="200dp">
            <TextView android:text="@string/advanced_setting"
                android:textSize="65sp"
                android:textColor="#000"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/software_info"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/manager_button_type"
            android:layout_width="360dp"
            android:layout_height="200dp">
            <TextView android:text="@string/software_info"
                android:textSize="65sp"
                android:textColor="#000"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/backtodesktop"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/manager_button_type"
            android:layout_width="360dp"
            android:layout_height="200dp">
            <TextView android:text="@string/backtodesktop"
                android:textSize="65sp"
                android:textColor="#000"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/restart_App"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/manager_button_type"
            android:layout_width="360dp"
            android:layout_height="200dp">
            <TextView android:text="@string/restart_App"
                android:textSize="65sp"
                android:textColor="#000"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </GridLayout>




</RelativeLayout>
